# ChronoBright

./: .editorconfig  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
chronobright/: __init__.py  __main__.py  config.py  i18n.py  logger.py  models.py  time_utils.py
chronobright/services/: __init__.py  brightness_service.py  schedule_service.py  settings_service.py  tray_service.py
chronobright/ui/: __init__.py  app.py  theme.py
tests/: conftest.py  test_app.py  test_app_smoke.py  test_brightness_service.py  test_config.py  test_i18n.py  test_logger.py  test_main.py  test_models.py  test_schedule_service.py  test_settings_service.py  test_theme.py  test_time_utils.py  test_tray_service.py
