[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronobright"
version = "1.0.0"
description = "Scheduled display brightness control for Windows"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["brightness", "scheduler", "display", "windows", "tray"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "customtkinter==5.2.2",
    "screen-brightness-control==0.27.1",
    "schedule==1.2.2",
    "pystray==0.19.5",
    "Pillow==12.0.0",
]

[project.scripts]
chronobright = "chronobright.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chronobright*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
